--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="tron" />
+<meta name="keywords" content="tron price, tron chart, trx price, tron price chart, live tron price, tron real time price, tron market cap, tron chart price, tron coin, tron supply, tron tokens, tron trx" />
+<meta name="description" id="mdescription" content="" />	
 	
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
