--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Tron Price</title>
+<title>Tron Price - Live Tron Price Chart - TRX/USD Price</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="tron price, tron chart, trx price, tron price chart, live tron price, tron real time price, tron market cap, tron chart price, tron coin, tron supply, tron tokens, tron trx" />
-<meta name="description" id="mdescription" content="" />	
+<meta name="description" id="mdescription" content="Tron live price today with tron price chart. Get TRX/USD price with real time charts and market cap with tron supply and 24 hours tron trading volume." />	
 	
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
