--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 							<span id="price"></span>
 						</div>
 						<div class="col-md-3 mid-top">
-							<span id="changes" class="positive">18.76%</span>
+							<span id="change" class="positive"></span>
 						</div>
 					</div>
 					<div class="row" style="padding:15px;">
