--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 <meta name="keywords" content="tron price, tron chart, trx price, tron price chart, live tron price, tron real time price, tron market cap, tron chart price, tron coin, tron supply, tron tokens, tron trx" />
 <meta name="description" id="mdescription" content="Tron live price today with tron price chart. Get TRX/USD price with real time charts and market cap with tron supply and 24 hours tron trading volume." />	
 	
-	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+	<!-- <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />-->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
