--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="tron price, tron chart, trx price, tron price chart, live tron price, tron real time price, tron market cap, tron chart price, tron coin, tron supply, tron tokens, tron trx" />
 <meta name="description" id="mdescription" content="Tron live price today with tron price chart. Get TRX/USD price with real time charts and market cap with tron supply and 24 hours tron trading volume." />	
-	
+<meta name="twitter:title" content="Tron Price - Live Tron Price Chart - TRX/USD Price" />
+<meta name="twitter:description" content="Tron live price today with tron price chart. Get TRX/USD price with real time charts and market cap with tron supply and 24 hours tron trading volume.">
+<meta name="twitter:image" content="https://tronprice.org/images/trx-logo.png">
+<meta name="twitter:card" content="summary_large_image">
 	<!-- <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
