--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="twitter:description" content="Tron live price today with tron price chart. Get TRX/USD price with real time charts and market cap with tron supply and 24 hours tron trading volume.">
 <meta name="twitter:image" content="https://tronprice.org/images/trx-logo.png">
 <meta name="twitter:card" content="summary_large_image">
-	<!-- <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />-->
+	<link rel='favicon icon' type='image/x-icon' href='/images/favicon.ico' />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
