--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <meta name="twitter:description" content="Tron live price today with tron price chart. Get TRX/USD price with real time charts and market cap with tron supply and 24 hours tron trading volume.">
 <meta name="twitter:image" content="https://tronprice.org/images/trx-logo.png">
 <meta name="twitter:card" content="summary_large_image">
+<meta name="google-site-verification" content="ZZzu1MBM5qmfH3ND1RttAXu-iEMq7EMgzZAi1j1QNhM" />	
 	<link rel='favicon icon' type='image/x-icon' href='/images/favicon.ico' />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
