--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
+	<link rel="canonical" href="https://tronprice.org/" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
