--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <div class=container>
 <nav class="py-4 d-md-flex">
 <div id=logo>
-<h1> <a href=index.html><span><img src=images/trx-logo.png style=width:32px;height:32px /></span> TRON PRICE</a></h1>
+<h1> <a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" style="width:32px;height:32px" /></span> TRON PRICE</a></h1>
 </div>
 <label for=drop class=toggle>Menu</label>
 <input type=checkbox id=drop />
@@ -93,7 +93,7 @@
 <div class=row>
 <div class="col-md-3 mid-top left-bar">
 <div class="col-md-12 bar-top">
-<img src=https://static.coincap.io/assets/icons/trx@2x.png class="ui tiny image">
+<img src="https://static.coincap.io/assets/icons/trx@2x.png" alt="TRX Price" class="ui tiny image">
 <span class=bar-name>TRON (TRX)</span>
 </div>
 <div class="col-md-12 bar-para">
@@ -107,12 +107,11 @@
 </div>
 </div>
 <div class=col-md-9>
-<center><div class=tradingview-widget-container>
+<div class=tradingview-widget-container>
 <div id=tradingview_1f962></div>
 <div class=tradingview-widget-copyright><a href=https://www.tradingview.com/symbols/BINANCE-TRXUSD/ rel=noopener target=_blank><span class=blue-text>TRXUSD chart</span></a> by TradingView</div>
 <script type=text/javascript src=https://s3.tradingview.com/tv.js></script>
 <script type=text/javascript>new TradingView.widget({width:"100%",height:510,symbol:"BINANCE:TRXUSD",interval:"D",timezone:"Etc/UTC",theme:"Dark",style:"1",locale:"en",toolbar_bg:"#f1f3f6",enable_publishing:false,hide_legend:true,container_id:"tradingview_1f962"});</script>
-</center>
 </div>
 </div>
 </div>
@@ -182,7 +181,7 @@
 <div class=container>
 <div class="row footer-grids">
 <div class="col-lg-2 footer-left pr-0">
-<h2 class=logo><a href=index.html><span><img src=images/trx-logo.png style=width:32px;height:32px /></span><span style=font-size:12px> TRON PRICE</span></a></h2>
+<h2 class=logo><a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" style="width:32px;height:32px" /></span><span style=font-size:12px> TRON PRICE</span></a></h2>
 </div>
 <div class="col-lg-8 footer-middle p-0">
 <p>© 2018 TRON Price. All Rights Reserved</p>
