--- a/public/index.html
+++ b/public/index.html
@@ -130,12 +130,12 @@
 <div class=input-group-prepend>
 <div class=input-group-text id=basic-addon style=background:#292929;border-color:#292929;color:#fff;line-height:2> TRX</div>
 </div>
-<input type=text style=padding:1.375rem 0.75rem;max-width:55%;font-size:2rem class=form-control value=1 id=trx_input aria-describedby=helpId placeholder>
+<input type=text style="padding:1.375rem 0.75rem;max-width:55%;font-size:2rem;" class=form-control value=1 id=trx_input aria-describedby=helpId placeholder>
 </div>
 </div><span style=font-size:28px>=</span>
 <div class=col-md-5>
 <div class="input-group mb-3">
-<input type=text style=padding:1.375rem 0.75rem;max-width:55%;font-size:2rem class=form-control name id=usd_price aria-describedby=helpId placeholder>
+<input type=text style="padding:1.375rem 0.75rem;max-width:55%;font-size:2rem;" class=form-control name id=usd_price aria-describedby=helpId placeholder>
 <div class=input-group-append>
 <div class=input-group-text id=basic-addon style=background:#292929;border-color:#292929;color:#fff;line-height:2> USD</div>
 </div>
