--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <div class=container>
 <nav class="py-4 d-md-flex">
 <div id=logo>
-<h1> <a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" style="width:32px;height:32px" /></span> TRON PRICE</a></h1>
+<h1> <a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" id="trximg" /></span> TRON PRICE</a></h1>
 </div>
 <label for=drop class=toggle>Menu</label>
 <input type=checkbox id=drop />
@@ -43,7 +43,7 @@
 <div class=slider-info>
 <div class=row>
 <div class=col-md-12>
-<div class="row uper" style=padding-bottom:12px>
+<div class="row uper">
 <div class="col-md-3 mid-top">
 <span class=flag>
 <h2><span id=rank></span></h2>
@@ -58,7 +58,7 @@
 <span id=change class=positive></span>
 </div>
 </div>
-<div class=row style=padding:15px>
+<div class="row wall">
 <div class=col-md-4>
 <div class=form-group>
 <div class="input-group mb-3">
@@ -126,18 +126,18 @@
 <div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
 <div class=row>
 <div class=col-md-6>
-<div class="input-group mb-3" style=justify-content:flex-end>
+<div class="input-group mb-3 calculator">
 <div class=input-group-prepend>
-<div class=input-group-text id=basic-addon style=background:#292929;border-color:#292929;color:#fff;line-height:2> TRX</div>
+<div class=input-group-text  id="basic-addon calcl-md"> TRX</div>
 </div>
-<input type=text style="padding:1.375rem 0.75rem;max-width:55%;font-size:2rem;" class=form-control value=1 id=trx_input aria-describedby=helpId placeholder>
+<input type=text class="form-control calcl" value=1 id=trx_input aria-describedby=helpId placeholder>
 </div>
-</div><span style=font-size:28px>=</span>
+</div><span class"eqo">=</span>
 <div class=col-md-5>
 <div class="input-group mb-3">
-<input type=text style="padding:1.375rem 0.75rem;max-width:55%;font-size:2rem;" class=form-control name id=usd_price aria-describedby=helpId placeholder>
+<input type=text class="form-control calcl" name id=usd_price aria-describedby=helpId placeholder>
 <div class=input-group-append>
-<div class=input-group-text id=basic-addon style=background:#292929;border-color:#292929;color:#fff;line-height:2> USD</div>
+<div class=input-group-text id="basic-addon calcl-md"> USD</div>
 </div>
 </div>
 </div>
@@ -145,10 +145,10 @@
 </div>
 </div>
 </section>
-<section class="about py-5" id=how style=margin-bottom:130px>
+<section class="about py-5" id="how">
 <div class="container py-md-5">
 <div class="row about-grids">
-<div class=col-lg-6 style="border:1px solid #111;border-radius:6px">
+<div class=col-lg-6" id="twt">
 <div class=wb-twitter>
 <script async src=https://platform.twitter.com/widgets.js charset=utf-8></script>
 <a class=twitter-timeline href=https://twitter.com/Tronfoundation data-tweet-limit=1>Tweets by Tronfoundation</a>
@@ -181,7 +181,7 @@
 <div class=container>
 <div class="row footer-grids">
 <div class="col-lg-2 footer-left pr-0">
-<h2 class=logo><a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" style="width:32px;height:32px" /></span><span style=font-size:12px> TRON PRICE</span></a></h2>
+<h2 class=logo><a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" id="trximg" /></span><span class="logo-foot"> TRON PRICE</span></a></h2>
 </div>
 <div class="col-lg-8 footer-middle p-0">
 <p>© 2018 TRON Price. All Rights Reserved</p>
