--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 </div>
 <input type=text class="form-control calcl" value=1 id=trx_input aria-describedby=helpId placeholder>
 </div>
-</div><span class"eqo">=</span>
+</div><span class="eqo">=</span>
 <div class=col-md-5>
 <div class="input-group mb-3">
 <input type=text class="form-control calcl" name id=usd_price aria-describedby=helpId placeholder>
