--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 <div class=col-md-6>
 <div class="input-group mb-3 calculator">
 <div class=input-group-prepend>
-<div class=input-group-text  id="basic-addon calcl-md"> TRX</div>
+<div class=input-group-text  id="basic-addon calcl-mid"> TRX</div>
 </div>
 <input type=text class="form-control calcl" value=1 id=trx_input aria-describedby=helpId placeholder>
 </div>
@@ -137,7 +137,7 @@
 <div class="input-group mb-3">
 <input type=text class="form-control calcl" name id=usd_price aria-describedby=helpId placeholder>
 <div class=input-group-append>
-<div class=input-group-text id="basic-addon calcl-md"> USD</div>
+<div class=input-group-text id="basic-addon calcl-mid"> USD</div>
 </div>
 </div>
 </div>
