--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
 <section class="about py-5" id="how">
 <div class="container py-md-5">
 <div class="row about-grids">
-<div class=col-lg-6" id="twt">
+<div class=col-lg-6 id="twt">
 <div class=wb-twitter>
 <script async src=https://platform.twitter.com/widgets.js charset=utf-8></script>
 <a class=twitter-timeline href=https://twitter.com/Tronfoundation data-tweet-limit=1>Tweets by Tronfoundation</a>
