--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <div class=container>
 <nav class="py-4 d-md-flex">
 <div id=logo>
-<h1> <a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" id="trximg" /></span> TRON PRICE</a></h1>
+<h1> <a href=index.html><span><img src=images/trx-logo.png alt="Tron Price" id=trximg /></span> TRON PRICE</a></h1>
 </div>
 <label for=drop class=toggle>Menu</label>
 <input type=checkbox id=drop />
@@ -93,7 +93,7 @@
 <div class=row>
 <div class="col-md-3 mid-top left-bar">
 <div class="col-md-12 bar-top">
-<img src="https://static.coincap.io/assets/icons/trx@2x.png" alt="TRX Price" class="ui tiny image">
+<img src=https://static.coincap.io/assets/icons/trx@2x.png alt="TRX Price" class="ui tiny image">
 <span class=bar-name>TRON (TRX)</span>
 </div>
 <div class="col-md-12 bar-para">
@@ -128,16 +128,16 @@
 <div class=col-md-6>
 <div class="input-group mb-3 calculator">
 <div class=input-group-prepend>
-<div class="input-group-text calcl-mid" id="basic-addon"> TRX</div>
+<div class="input-group-text calcl-mid" id=basic-addon> TRX</div>
 </div>
 <input type=text class="form-control calcl" value=1 id=trx_input aria-describedby=helpId placeholder>
 </div>
-</div><span class="eqo">=</span>
+</div><span class=eqo>=</span>
 <div class=col-md-5>
 <div class="input-group mb-3">
 <input type=text class="form-control calcl" name id=usd_price aria-describedby=helpId placeholder>
 <div class=input-group-append>
-<div class="input-group-text calcl-mid" id="basic-addon"> USD</div>
+<div class="input-group-text calcl-mid" id=basic-addon> USD</div>
 </div>
 </div>
 </div>
@@ -145,10 +145,10 @@
 </div>
 </div>
 </section>
-<section class="about py-5" id="how">
+<section class="about py-5" id=how>
 <div class="container py-md-5">
 <div class="row about-grids">
-<div class=col-lg-6 id="twt">
+<div class=col-lg-6 id=twt>
 <div class=wb-twitter>
 <script async src=https://platform.twitter.com/widgets.js charset=utf-8></script>
 <a class=twitter-timeline href=https://twitter.com/Tronfoundation data-tweet-limit=1>Tweets by Tronfoundation</a>
@@ -181,7 +181,7 @@
 <div class=container>
 <div class="row footer-grids">
 <div class="col-lg-2 footer-left pr-0">
-<h2 class=logo><a href=index.html><span><img src="images/trx-logo.png" alt="Tron Price" id="trximg" /></span><span class="logo-foot"> TRON PRICE</span></a></h2>
+<h2 class=logo><a href=index.html><span><img src=images/trx-logo.png alt="Tron Price" id=trximg /></span><span class=logo-foot> TRON PRICE</span></a></h2>
 </div>
 <div class="col-lg-8 footer-middle p-0">
 <p>© 2018 TRON Price. All Rights Reserved</p>
